--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <!-- Keinginan -->
     <div class="desire-container" id="desireContainer">
         <div class="desire-content">
-            <h1 class="desire-title">Pengen 99 😭</h1>
+            <h1 class="desire-title">Yudah sih bodo amat</h1>
         </div>
     </div>
 
