--- a/index.html
+++ b/index.html
@@ -4,179 +4,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ucapan Maaf yang Santai</title>
+    <title>404 Not Found</title>
     <style>
-        /* Style untuk pertanyaan */
-        .question-container {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .question {
-            font-size: 24px;
-            color: #333;
+        body {
             font-family: Arial, sans-serif;
-            padding: 10px 20px;
-            border-radius: 20px;
-            background-color: #f9f9f9;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            display: inline-block;
-            cursor: pointer;
-            transition: transform 0.3s ease-in-out;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
-        .question:hover {
-            transform: scale(1.05);
-        }
-
-        /* Style untuk tombol */
-        .button-container {
+        .container {
             text-align: center;
-            margin-bottom: 20px;
+            animation: bounce 2s infinite;
         }
 
-        .button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-            margin-right: 10px;
-            border-radius: 20px;
-            transition: transform 0.3s ease-in-out;
+        @keyframes bounce {
+
+            0%,
+            20%,
+            50%,
+            80%,
+            100% {
+                transform: translateY(0);
+            }
+
+            40% {
+                transform: translateY(-30px);
+            }
+
+            60% {
+                transform: translateY(-15px);
+            }
         }
 
-        .button:hover {
-            transform: scale(1.05);
+        h1 {
+            font-size: 6em;
+            color: #dc3545;
+            margin-bottom: 0;
         }
 
-        /* Style untuk pesan maaf */
-        .apology-container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 2px solid #007bff;
-            border-radius: 10px;
-            text-align: left;
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            display: none;
-            transition: opacity 0.5s ease-in-out; /* Animasi transisi */
+        p {
+            font-size: 1.5em;
+            color: #6c757d;
+            margin-top: 0;
         }
 
-        .apology-title {
-            font-size: 24px;
+        a {
             color: #007bff;
-            margin-bottom: 20px;
-        }
-
-        .apology-content {
-            font-size: 18px;
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        .apology-list {
-            margin-bottom: 20px;
-        }
-
-        .apology-list li {
-            margin-bottom: 10px;
-        }
-
-        .signature {
-            font-style: italic;
-        }
-
-        /* Style untuk keinginan */
-        .desire-container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            border: 2px solid #ff1493;
-            border-radius: 10px;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            background-color: #ffe4e1;
-            display: none;
-            transition: opacity 0.5s ease-in-out; /* Animasi transisi */
-        }
-
-        .desire-title {
-            font-size: 24px;
-            color: #ff1493;
-            margin-bottom: 20px;
-        }
-
-        .desire-content {
-            font-size: 18px;
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        .desire-emoji {
-            font-size: 36px;
-            margin-bottom: 10px;
+            text-decoration: none;
+            font-weight: bold;
         }
     </style>
 </head>
 
 <body>
-
-    <!-- Pertanyaan -->
-    <div class="question-container">
-        <div class="question">Kamu marah ya sama aku?</div>
+    <div class="container">
+        <h1>404</h1>
+        <p>Cie mau ngeliat lagi tapi udah gak ada wkwk</p>
     </div>
-
-    <!-- Tombol Ya dan Tidak -->
-    <div class="button-container">
-        <button id="yesButton" onclick="showApologyWithAnimation()" class="button">Ya</button>
-        <button id="noButton" onclick="showDesireWithAnimation()" class="button">Tidak</button>
-    </div>
-
-    <!-- Pesan Maaf -->
-    <div class="apology-container" id="apologyContainer">
-        <h1 class="apology-title">Maaf Ya Naia</h1>
-        <div class="apology-content">
-            <p>Aku tahu aku bikin kesal kamu tadi. Maaf banget ya. Aku nggak sengaja kok bikin kamu kesel.</p>
-        </div>
-    </div>
-
-    <!-- Keinginan -->
-    <div class="desire-container" id="desireContainer">
-        <div class="desire-content">
-            <h1 class="desire-title">Yaudah sih bodo amat</h1>
-        </div>
-    </div>
-
-    <script>
-        var apologyContainer = document.getElementById("apologyContainer");
-        var desireContainer = document.getElementById("desireContainer");
-
-        // Fungsi untuk menampilkan pesan maaf dengan animasi
-        function showApologyWithAnimation() {
-            apologyContainer.style.opacity = "0"; // Set opacity menjadi 0 terlebih dahulu
-            apologyContainer.style.display = "block"; // Tampilkan container
-            setTimeout(function () {
-                apologyContainer.style.opacity = "1"; // Set opacity menjadi 1 dengan animasi
-            }, 50); // Tunda animasi sedikit untuk memberikan waktu agar CSS diterapkan
-
-
-            desireContainer.style.display = "none";
-        }
-
-        // Fungsi untuk menampilkan keinginan dengan animasi
-        function showDesireWithAnimation() {
-            desireContainer.style.opacity = "0"; // Set opacity menjadi 0 terlebih dahulu
-            desireContainer.style.display = "block"; // Tampilkan container
-            setTimeout(function () {
-                desireContainer.style.opacity = "1"; // Set opacity menjadi 1 dengan animasi
-            }, 50); // Tunda animasi sedikit untuk memberikan waktu agar CSS diterapkan
-
-            apologyContainer.style.display = "none";
-        }
-    </script>
-
 </body>
 
 </html>
